--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -9,13 +9,13 @@
     <form action="/recipes" method="post">
       <p>
           <label for="name"><b>Name: </b></label>
-          <input id="name" type="text" name="recipe[name]">
+          <input id="name" type="text" name="name">
       </p><p>
           <label for="ingredients"><b>Ingredients: </b></label>
-          <input id="ingredients" type="text" name="recipe[ingredients]">
+          <input id="ingredients" type="text" name="ingredients">
       </p><p>
           <label for="cook_time"><b>Cook time: </b></label>
-          <input id="cook_time" type="text" name="recipe[cook_time]">
+          <input id="cook_time" type="text" name="cook_time">
       </p>
         <input type="submit" name="Submit" value="Submit">
     </form>
